Update and rename setup-guide-whmcs-setup.md to 1. setup-guide-whmcs-setup.md

--- a/doc/Installation and configuration guide/1. setup-guide-whmcs-setup.md
+++ b/doc/Installation and configuration guide/1. setup-guide-whmcs-setup.md
@@ -2,7 +2,7 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
 
-##### 1. Download the latest version of the module.
+### 1. Download the latest version of the module.
 
 PHP 8.1
 
@@ -16,17 +16,17 @@ PHP 7.4
 wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/php74/PUQ_WHMCS-ownCloud-latest.zip
 ```
 
-<p class="callout info">All versions are available via link: [http://download.puqcloud.com/WHMCS/servers/PUQ\_WHMCS-ownCloud/](http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/)</p>
+>All versions are available via link: [http://download.puqcloud.com/WHMCS/servers/PUQ\_WHMCS-ownCloud/](http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/)
 
-##### 2. Unzip the archive with the module.
+### 2. Unzip the archive with the module.
 
 ```Powershell
 unzip PUQ_WHMCS-ownCloud-latest.zip
 ```
 
-##### 3. Copy "puqownCloud" to "WHMCS\_WEB\_DIR/modules/servers/"
+### 3. Copy "puqownCloud" to "WHMCS\_WEB\_DIR/modules/servers/"
 
-##### 4. Create new server ownCloud in WHMCS (System Settings-&gt;Products/Services-&gt;Servers)
+### 4. Create new server ownCloud in WHMCS (System Settings-&gt;Products/Services-&gt;Servers)
 
 ```
 System Settings->Servers->Add New Server
@@ -36,7 +36,7 @@ System Settings->Servers->Add New Server
 - In the **Server Details** section, select the "**PUQ ownCloud**" module and enter the correct **username** and **password** for the **ownCloud web interface**.
 - To check, click the **"Test connection"** button[![image-1677935187015.png](https://doc.puq.info/uploads/images/gallery/2023-03/scaled-1680-/image-1677935187015.png)](https://doc.puq.info/uploads/images/gallery/2023-03/image-1677935187015.png)
 
-##### 5. Create a new Products/Services
+### 5. Create a new Products/Services
 
 ```
 System Settings->Products/Services->Create a New Product
