Update and rename email-template-puqowncloud-notification-disk-limit.md to 2. email-template-puqowncloud-notification-disk-limit.md

--- a/doc/Installation and configuration guide/2. email-template-puqowncloud-notification-disk-limit.md
+++ b/doc/Installation and configuration guide/2. email-template-puqowncloud-notification-disk-limit.md
@@ -2,7 +2,7 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
 
-##### Create an email template for customer notifications.
+### Create an email template for customer notifications.
 
 ```
 System Settings->Email Templates->Create New Email Template
