--- a/doc/Installation and configuration guide/3. add-server-owncloud-server.md
+++ b/doc/Installation and configuration guide/3. add-server-owncloud-server.md
@@ -2,7 +2,7 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
 
-##### Add a new server to the system WHMCS.
+### Add a new server to the system WHMCS.
 
 ```
 System Settings->Servers->Add New Server
