Update and rename product-configuration.md to 4. product-configuration.md

--- a/doc/Installation and configuration guide/4. product-configuration.md
+++ b/doc/Installation and configuration guide/4. product-configuration.md
@@ -2,7 +2,7 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
 
-##### Add new product to WHMCS
+### Add new product to WHMCS
 
 ```
 System Settings->Products/Services->Create a New Product
