Update and rename disk-statistics.md to 3. disk-statistics.md

--- a/doc/Client Area/3. disk-statistics.md
+++ b/doc/Client Area/3. disk-statistics.md
@@ -6,6 +6,6 @@ Client can check the data usage statistics in the menu item **"Used space statis
 
 [![image-1660030631292.png](https://doc.puq.info/uploads/images/gallery/2022-08/scaled-1680-/image-1660030631292.png)](https://doc.puq.info/uploads/images/gallery/2022-08/image-1660030631292.png)
 
-##### Disk Usage Charts
+### Disk Usage Charts
 
 [![image-1677937581919.png](https://doc.puq.info/uploads/images/gallery/2023-03/scaled-1680-/image-1677937581919.png)](https://doc.puq.info/uploads/images/gallery/2023-03/image-1677937581919.png)
