--- a/doc/03. Installation and configuration guide/01. whmcs-setupinstallupdate.md
+++ b/doc/03. Installation and configuration guide/01. whmcs-setupinstallupdate.md
@@ -2,13 +2,9 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
 
-#####  
+>To install and update a module, you must perform one and the same action.
 
-<p class="callout info">To install and update a module, you must perform one and the same action.</p>
-
-#####  
-
-##### 1. Download the latest version of the module.
+### 1. Download the latest version of the module.
 
 PHP 8.1
 
@@ -22,12 +18,12 @@ PHP 7.4
 wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/php74/PUQ_WHMCS-ownCloud-latest.zip
 ```
 
-<p class="callout info">All versions are available via link: [http://download.puqcloud.com/WHMCS/servers/PUQ\_WHMCS-ownCloud/](http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/)</p>
+>All versions are available via link: [http://download.puqcloud.com/WHMCS/servers/PUQ\_WHMCS-ownCloud/](http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/)
 
-##### 2. Unzip the archive with the module.
+### 2. Unzip the archive with the module.
 
 ```Powershell
 unzip PUQ_WHMCS-ownCloud-latest.zip
 ```
 
-##### 3. Copy and Replace "puqownCloud" to "WHMCS\_WEB\_DIR/modules/servers/"
+### 3. Copy and Replace "puqownCloud" to "WHMCS\_WEB\_DIR/modules/servers/"
