--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -1,6 +1,21 @@
-# Changelog
+## ownCloud module **[WHMCS](https://puqcloud.com/link.php?id=77)**
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
+
+# Changelog
+
+### v1.2 Released 21-12-2023
+
+1. Support **ownCloud 10.13.3**
+
+Client Area Enhancements:
+
+1. Display the URL of the server with the port if it is not standard.
+2. Added the ability to disable the display of service passwords by default.
+3. Introduced a "Show" button for displaying service passwords in the Client Area.
+4. Provided options to display service passwords in plain text.
+
+> **You should save the 'Module Setting' in your products for the module to function correctly.**
 
 ### v1.1 Released 09-10-2023
  
