--- a/doc/03. Installation and configuration guide/01. whmcs-setup-install-update.md
+++ b/doc/03. Installation and configuration guide/01. whmcs-setup-install-update.md
@@ -1,6 +1,8 @@
-# 1. WHMCS setup(install/update)
+## ownCloud module **[WHMCS](https://puqcloud.com/link.php?id=77)**
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
+
+# 1. WHMCS setup(install/update)
 
 >To install and update a module, you must perform one and the same action.
 
