--- a/doc/03. Installation and configuration guide/04. add-server-owncloud-server.md
+++ b/doc/03. Installation and configuration guide/04. add-server-owncloud-server.md
@@ -1,6 +1,8 @@
-# Add server (ownCloud server)
+## ownCloud module **[WHMCS](https://puqcloud.com/link.php?id=77)**
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
+
+# Add server (ownCloud server)
 
 ### Add a new server to the system WHMCS.
 
