--- a/doc/04. Client Area/2. email-notification.md
+++ b/doc/04. Client Area/2. email-notification.md
@@ -1,6 +1,8 @@
-# Email notification
+## ownCloud module **[WHMCS](https://puqcloud.com/link.php?id=77)**
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
+
+# Email notification
 
 ### **Below you can see an example of an email notification regarding data limit**
 
