--- a/doc/04. Client Area/3. disk-statistics.md
+++ b/doc/04. Client Area/3. disk-statistics.md
@@ -1,6 +1,8 @@
-# Disk statistics
+## ownCloud module **[WHMCS](https://puqcloud.com/link.php?id=77)**
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
+
+# Disk statistics
 
 Client can check the data usage statistics in the menu item **"Used space statistics"**
 
