--- a/doc/03. Installation and configuration guide/05. product-configuration.md
+++ b/doc/03. Installation and configuration guide/05. product-configuration.md
@@ -1,6 +1,8 @@
-# Product Configuration
+## ownCloud module **[WHMCS](https://puqcloud.com/link.php?id=77)**
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
+
+# Product Configuration
 
 ### Add new product to WHMCS
 
