--- a/doc/04. Client Area/1. home-screen.md
+++ b/doc/04. Client Area/1. home-screen.md
@@ -1,6 +1,8 @@
-# Home screen
+## ownCloud module **[WHMCS](https://puqcloud.com/link.php?id=77)**
 
 #####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
+
+# Home screen
 
 The end customer, after logging in to his own customer panel, has access to the following information and options
 
