--- a/doc/01. description.md
+++ b/doc/01. description.md
@@ -46,6 +46,8 @@ The module is used to create customer accounts on the previously prepared ownClo
 
 [![image-1677933560289.png](https://doc.puq.info/uploads/images/gallery/2023-03/scaled-1680-/image-1677933560289.png)](https://doc.puq.info/uploads/images/gallery/2023-03/image-1677933560289.png)
 
+![image](https://github.com/PUQ-sp-z-o-o/WHMCS-Module-ownCloud/assets/81689153/c010c38a-892c-41ba-bfe7-7d79f87dfbb3)
+
 [![image-1677933046824.png](https://doc.puq.info/uploads/images/gallery/2023-03/scaled-1680-/image-1677933046824.png)](https://doc.puq.info/uploads/images/gallery/2023-03/image-1677933046824.png)
 
 [![image-1677933571641.png](https://doc.puq.info/uploads/images/gallery/2023-03/scaled-1680-/image-1677933571641.png)](https://doc.puq.info/uploads/images/gallery/2023-03/image-1677933571641.png)
