--- a/doc/04. Client Area/1. home-screen.md
+++ b/doc/04. Client Area/1. home-screen.md
@@ -13,3 +13,5 @@ The end customer, after logging in to his own customer panel, has access to the 
 - Table with data on the use of the service
 
 [![image-1677937408616.png](https://doc.puq.info/uploads/images/gallery/2023-03/scaled-1680-/image-1677937408616.png)](https://doc.puq.info/uploads/images/gallery/2023-03/image-1677937408616.png)
+
+![image](https://github.com/PUQ-sp-z-o-o/WHMCS-Module-ownCloud/assets/81689153/0a2d1090-14ce-413f-88cd-97877945525c)
