--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -4,6 +4,12 @@
 
 # Changelog
 
+### v1.3 Released 06-06-2024
+1. Client area more adapted for mobile version
+2. Buttons for copying login and password have been added to the client area
+
+- - - - -
+
 ### v1.2 Released 21-12-2023
 
 1. Support **ownCloud 10.13.3**
