--- a/doc/03. Installation and configuration guide/02. setup-guide-whmcs-setup.md
+++ b/doc/03. Installation and configuration guide/02. setup-guide-whmcs-setup.md
@@ -1,6 +1,6 @@
 ## ownCloud module **[WHMCS](https://puqcloud.com/link.php?id=77)**
 
-#####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Dowload](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
+#####  [Order now](https://puqcloud.com/whmcs-module-owncloud.php) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/) | [FAQ](https://faq.puqcloud.com/)
 
 # Setup guide: WHMCS setup
 
