--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -4,6 +4,11 @@
 
 # Changelog
 
+### v1.3.1 Released 13-08-2024
+Fixed bug with password, when "Show password" is "no"
+
+- - - - -
+
 ### v1.3 Released 06-06-2024
 1. Client area more adapted for mobile version
 2. Buttons for copying login and password have been added to the client area
