--- a/doc/03. Installation and configuration guide/01. whmcs-setup-install-update.md
+++ b/doc/03. Installation and configuration guide/01. whmcs-setup-install-update.md
@@ -4,14 +4,27 @@
 
 # 1. WHMCS setup(install/update)
 
+> Module is coded ionCube v13
+
+Supported php version:
+- php 7.4 WHMCS 8.11.0 -
+- php 8.1 WHMCS 8.11.0 +
+- php 8.2 WHMCS 8.11.0 +
+
 >To install and update a module, you must perform one and the same action.
 
 ### 1. Download the latest version of the module.
 
+PHP 8.2
+
+```Powershell
+wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/php82/PUQ_WHMCS-ownCloud-latest.zip
+```
+
 PHP 8.1
 
 ```Powershell
-wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/PUQ_WHMCS-ownCloud-latest.zip
+wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-ownCloud/php81/PUQ_WHMCS-ownCloud-latest.zip
 ```
 
 PHP 7.4
